--- a/.github/workflows/cpp-autobuild.yml
+++ b/.github/workflows/cpp-autobuild.yml
@@ -12,24 +12,22 @@ jobs:
   build:
     runs-on: ubuntu-latest
 
+    strategy:
+      matrix:
+        compiler: [gcc, clang]
+
     steps:
     - name: Checkout code
       uses: actions/checkout@v3
 
-    - name: Set up C++ environment
-      uses: llvm/llvm-project@v1
-      with:
-        compiler: clang
-
     - name: Install dependencies
-      run: sudo apt-get install -y g++
+      run: sudo apt-get update && sudo apt-get install -y cmake build-essential
+
+    - name: Configure CMake
+      run: cmake -S . -B build -DCMAKE_CXX_COMPILER=${{ matrix.compiler }}
 
     - name: Build
-      run: |
-        mkdir build
-        cd build
-        cmake ..
-        make
+      run: cmake --build build
 
     - name: Run tests
       run: ./build/your_executable_name
