--- a/.github/workflows/cpp-autobuild.yml
+++ b/.github/workflows/cpp-autobuild.yml
@@ -14,20 +14,20 @@ jobs:
 
     strategy:
       matrix:
-        compiler: [gcc, clang]
+        compiler: [g++, clang++]
 
     steps:
     - name: Checkout code
       uses: actions/checkout@v3
 
     - name: Install dependencies
-      run: sudo apt-get update && sudo apt-get install -y cmake build-essential
+      run: sudo apt-get update && sudo apt-get install -y cmake g++ clang build-essential
 
     - name: Configure CMake
       run: cmake -S . -B build -DCMAKE_CXX_COMPILER=${{ matrix.compiler }}
 
     - name: Build
-      run: cmake --build build
+      run: cmake --build build --verbose
 
     - name: Run tests
-      run: ./build/your_executable_name
+      run: ./build/YourExecutableName
